[package]
name = "salus"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
strip = "debuginfo"
codegen-units = 1
panic = "abort"

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
attestation = { path = "./attestation" }
data_measure = { path = "./data-measure" }
der = "0.6.0"
device_tree = { path = "./device-tree" }
drivers = { path = "./drivers" }
hyp_alloc = { path = "./hyp-alloc" }
memoffset = { version = ">=0.6.5", features = ["unstable_const"] }
page_tracking = { path = "./page-tracking" }
riscv_page_tables = { path = "./riscv-page-tables" }
riscv_pages = { path = "./riscv-pages" }
riscv_regs = { path = "./riscv-regs" }
s_mode_utils = { path = "./s-mode-utils" }
sbi = { path = "./sbi" }
spin = { version = "*", default-features = false }
test_workloads = { path = "./test-workloads" }

[workspace]

members = [
        "test-workloads",
]
