[package]
name = "salus"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
strip = "debuginfo"
codegen-units = 1
panic = "abort"

[features]
salustsm = []

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
assertions = { path = "./assertions" }
attestation = { path = "./attestation" }
const-oid = { version = "0.9.0", features = ["db"] }
data_model = { path = "./data-model" }
der = "0.6.0"
device_tree = { path = "./device-tree" }
digest = {version = "0.10.3", default-features = false }
drivers = { path = "./drivers" }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend"] }
generic-array = "0.14.5"
hkdf = "0.12.3"
hyp_alloc = { path = "./hyp-alloc" }
memoffset = { version = ">=0.6.5", features = ["unstable_const"] }
page_tracking = { path = "./page-tracking" }
rice = { git = "https://github.com/rivosinc/rice" }
riscv_page_tables = { path = "./riscv-page-tables" }
riscv_pages = { path = "./riscv-pages" }
riscv_regs = { path = "./riscv-regs" }
s_mode_utils = { path = "./s-mode-utils" }
sbi = { path = "./sbi" }
spin = { version = "*", default-features = false }
sha2 = {version = "0.10", default-features = false }

[workspace]

members = [
        "test-workloads",
]
