# SPDX-FileCopyrightText: 2023 Rivos Inc.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "device_tree"
version = "0.1.0"
edition = "2021"

[dependencies]
hyp_alloc = { path = "../hyp-alloc" }

# TODO - vendor fdt-rs or find a better solution with fewer dependencies.
# use the fdt-rs crate without default features to allow nostd
[dependencies.fdt-rs]
git = "https://github.com/rivosinc/fdt-rs"
branch = "rivos/main"
default-features = false
