[package]
name = "drivers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
device_tree = { path = "../device-tree" }
riscv_page_tables = { path = "../riscv-page-tables" }
riscv_pages = { path = "../riscv-pages" }
riscv_regs = { path = "../riscv-regs" }
spin = { version = "*", default-features = false, features = ["once"] }
