# SPDX-FileCopyrightText: 2023 Rivos Inc.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "drivers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
const-field-offset = { version = "0.1.2" }
data_model = { path = "../data-model" }
device_tree = { path = "../device-tree" }
enum_dispatch = { version = "0.3.8" }
hyp_alloc = { path = "../hyp-alloc" }
memoffset = { version = ">=0.6.5", features = ["unstable_const"] }
page_tracking = { path = "../page-tracking" }
riscv_page_tables = { path = "../riscv-page-tables" }
riscv_pages = { path = "../riscv-pages" }
riscv_regs = { path = "../riscv-regs" }
s_mode_utils = { path = "../s-mode-utils" }
sbi_rs = { path = "../sbi-rs" }
static_assertions = "1.1"
sync = { path = "../sync" }
tock-registers = { version = "0.7" }
