[package]
name = "fdt"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/fdt.rs"

[dependencies]

# use the fdt-rs crate without default features to allow nostd
# TODO - vendor fdt-rs or find a better solution with fewer dependencies.
[dependencies.fdt-rs]
version = "0.4.3"
default-features = false
