[package]
name = "test_workloads"
authors = ["Rivos, Inc."]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
attestation = { path = "../attestation" }
der = "0.6.0"
device_tree = { path = "../device-tree" }
hex-literal = "0.3.4"
rice = { git = "https://github.com/rivosinc/rice" }
s_mode_utils = { path = "../s-mode-utils" }
sbi = { path = "../sbi" }
riscv_regs = { path = "../riscv-regs" }
