# SPDX-FileCopyrightText: 2023 Rivos Inc.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "umode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_model = { path = "../data-model" }
der = { version = "0.6.0", features = ["derive", "flagset", "oid"] }
libuser = { path = "../libuser" }
u_mode_api = { path = "../u-mode-api" }
rice = { path = "../rice" }
const-oid = { version = "0.9.0", features = ["db"] }
sha2 = {version = "0.10", default-features = false }
generic-array = "0.14.5"
ed25519 = { version = "1.5.2", default-features = false, features = ["pkcs8"] }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend"] }
